--- a/css/calculator.css
+++ b/css/calculator.css
@@ -7,9 +7,17 @@ table {
     font-size: 44px;
     text-align: center;
 }
+
 table td {
     width: 50px;
     height: 50px;
     border: 1px solid lightgrey;
     cursor: pointer;
+}
+
+h1 {
+    font-family: monospace;
+    font-size: 45px;
+    text-align: center;
+    font-weight: lighter;
 }
